Changelog
=========

12.4-dev0 - (unreleased)
---------------------

12.3 - (2018-08-22)
---------------------
* Change: Update to wkhtmltopdf 0.12.4 (add ----disable-smart-shrinking option)
  [avoinea refs #97586]
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]
* Change: fix tests to run on Plone 4.3.17
  [alecghica refs #96974]

12.2 - (2018-04-20)
-------------------
* Change: Possibility to group download info within AsyncInfo wrapper
  [avoinea]

12.1 - (2017-12-12)
-------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

12.0 - (2017-11-07)
-------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]
* Change: improved logging
  [alecghica refs #88578]

11.9 - (2017-06-26)
-------------------
* Change: Remove hard-dependency on plone.stringinterp
  [avoinea]
* Bug fix: Fixed imagemagick convert command, added colorspace parameter
  and page number parameter
  [zoltan_andras refs #85638]

11.8 - (2017-05-22)
-------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

11.7 - (2017-05-15)
-------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

11.6 - (2017-05-08)
-------------------
* Change: removed pdf.header title values if we print within collection.pdf.body
  since printing multiple pages will result in wrong title as soon as we print
  the next object
  [ichim-david refs #84084]

11.5 - (2017-04-24)
-------------------
* Change: updated package information
  [eduard-fironda]

11.4 - (2017-03-20)
-------------------
* Bug fix: fixed pdf.footer and pdf.header title enconding issues,
  when subpage has content that needed to be escaped
  [ichim-david refs #80861]

11.3 - (2017-01-17)
-------------------
* Bug fix: Remove hard dependency to CMFPlone introduced in v11.2
  [avoinea]

11.2 - (2017-01-17)
-------------------