@@ -3,6 +3,8 @@ Changelog
 
 12.4-dev0 - (unreleased)
 ---------------------
+* Feature: Use rsvg-convert to convert SVG to PNG or fallback to ImageMagick
+  [avoinea refs #97843]
 
 12.3 - (2018-08-22)
 ---------------------
